<resources>
    <string name="app_name">ToDoList</string>
    <string name="cajaNombre">Nombre</string>
    <string name="cajaCorreo">Correo</string>
    <string name="cajaContraseña">Contraseña</string>
    <string name="login">Login</string>
    <string name="createAc">Create account</string>
    <string name="mas">mas</string>
    <string name="logout">Logout</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="done">Done</string>
</resources>