<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombre"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaNombre"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaNombre"
            android:textColorHint="@color/morado_claro"
            android:textSize="16sp"
            app:cornerRadius="60sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreo"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaCorreo"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaCorreo"
            android:textColorHint="@color/morado_claro"
            android:textSize="16sp"
            app:cornerRadius="60sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContraseña"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaContraseña"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaContraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/morado_claro"
            android:textSize="16sp"
            app:cornerRadius="60sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="301dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/morado"
        android:text="@string/createAc"
        android:textSize="16sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>