<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login">


    <!--Para que se marque al iniciar-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="234dp"
        android:layout_height="196dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layautCorreo"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaCorreo"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaCorreo"
            android:textColorHint="@color/morado_claro"
            android:textSize="16sp"
            app:cornerRadius="60sp"/>
        <!--Para el color de las letras-->
        <!--Para el tamaño de la letra-->
        <!--Para el color de fondo de la caja-->
        <requestFocus />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layautContraseña"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layautCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaContraseña"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaContraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/morado_claro"
            android:textSize="16sp"
            app:cornerRadius="60sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="301dp"
        android:layout_height="52dp"
        android:layout_marginTop="54dp"
        android:backgroundTint="@color/morado"
        android:text="@string/login"
        android:textSize="16sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layautContraseña" />

    <TextView
        android:id="@+id/botonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/crea_una_cuenta"
        android:textColor="@color/morado"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonLogin" />

    -->
</androidx.constraintlayout.widget.ConstraintLayout>